@@ -43,8 +43,8 @@ public class ShortLocaleConverterTestCase extends BaseLocaleConverterTestCase {
 
         super.setUp();
 
-        defaultValue  = new Short("999");
-        expectedValue = new Short(expectedIntegerValue);
+        defaultValue  = Short.valueOf("999");
+        expectedValue = Short.valueOf(expectedIntegerValue);
 
     }
 
@@ -83,7 +83,7 @@ public class ShortLocaleConverterTestCase extends BaseLocaleConverterTestCase {
         // quite happily turning "1,234" into "1"
         // I guess this is one of the limitations of DecimalFormat
         // **************************************************************************
-        convertValueNoPattern(converter, "(B)", defaultIntegerValue, new Short("1"));
+        convertValueNoPattern(converter, "(B)", defaultIntegerValue, Short.valueOf("1"));
 
 
         // **************************************************************************
@@ -92,7 +92,7 @@ public class ShortLocaleConverterTestCase extends BaseLocaleConverterTestCase {
         // quite happily turning "1,234" into "1"
         // Again this is one of the limitations of DecimalFormat
         // **************************************************************************
-        convertValueWithPattern(converter, "(B)", localizedIntegerValue, defaultIntegerPattern, new Short("1"));
+        convertValueWithPattern(converter, "(B)", localizedIntegerValue, defaultIntegerPattern, Short.valueOf("1"));
 
 
         // **************************************************************************
